--- a/pr2_Pokormiak.ipynb
+++ b/pr2_Pokormiak.ipynb
@@ -269,7 +269,7 @@
       "cell_type": "code",
       "source": [
         "string_1 = \"I'm doing hometask while listening to Slowdive.\\nPerfect, isn't it?\"\n",
-        "string_raw = r\"I'm doing hometask while listening to Slowdive. Perfect, isn't it?\"\n",
+        "string_raw = r\"I'm doing hometask while listening to Slowdive.\\nPerfect, isn't it?\"\n",
         "print(string_1)\n",
         "print(string_raw)\n",
         "#єдина різниця яку я помітила це те що в сирому рядку не обробляються \\n. без нього обидва рядки мали однаковий вигляд"
@@ -279,9 +279,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5869ef7d-0fe4-4a56-dd58-c0f1d44af91e"
+        "outputId": "6f9e4764-252e-4ee3-d98a-9035c1926083"
       },
-      "execution_count": 83,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
           "text": [
             "I'm doing hometask while listening to Slowdive.\n",
             "Perfect, isn't it?\n",
-            "I'm doing hometask while listening to Slowdive. Perfect, isn't it?\n"
+            "I'm doing hometask while listening to Slowdive.\\nPerfect, isn't it?\n"
           ]
         }
       ]
